syntax = "proto3";

package vela.api.model;
option go_package = "github.com/oam-dev/velacp/pkg/proto/model";

message Definition{
  string name = 1;
  string desc = 2;
  string jsonschema = 3;
  string namespace = 4;
}

message DefinitionsResponse{
  repeated Definition definitions = 1;
}