syntax = "proto3";
package vela.api.model;

option go_package = "github.com/oam-dev/velacp/pkg/proto/model";

message Schema {

  string description = 1;

//  repeated Properties properties = 2;
  string name = 2;

  string jsonschema = 3;

}

message Properties{
  string name = 1;
  repeated Tuple tuple = 2;
  string jsonSchema = 3;
}

message Tuple {
  string name = 1;
  string description = 2;
  string printable_type = 3;
  bool required = 4;
  string default = 5;
}